Test failures fixes